@@ -5,6 +5,8 @@ See the file HISTORY for a user-oriented summary of all the changes.
   - (efuns.c) Efun sscanf(): Added test whether the constant characters after
       a %-field also match - if not, the %-field is considered unmatched
       (suggested by Largo).
+  - (efuns, func_spec) Efuns md5(): Accept the number of iterations as
+       optional argument (Bug #418).
 
 24-Nov-2005  (Gnomi)
   - (lex.c) <code>(: catch(load_object($1);nolog) :)</code> no
